syntax = "proto3";

package order;

service OrderService {
  rpc CreateOrder (CreateOrderRequest) returns (Order);
  rpc GetOrder (GetOrderRequest) returns (Order);
  rpc GetUserOrders (UserOrdersRequest) returns (OrderList);
  rpc UpdateOrderStatus (UpdateStatusRequest) returns (Order);
  rpc FindNearby (NearbyRequest) returns (OrderList);
}

message CreateOrderRequest {
  string userId = 1;
  string categoryId = 2;
  string cityId = 3;
  string description = 4;
  double longitude = 5;
  double latitude = 6;
}

message GetOrderRequest { string id = 1; }
message UserOrdersRequest { string userId = 1; }
message UpdateStatusRequest { string id = 1; string status = 2; }
message NearbyRequest { double longitude = 1; double latitude = 2; double radius = 3; }

message Order {
  string id = 1;
  string userId = 2;
  string categoryId = 3;
  string cityId = 4;
  string description = 5;
  string status = 6;
  double longitude = 7;
  double latitude = 8;
  string createdAt = 9;
}

message OrderList {
  repeated Order orders = 1;
}