import { Injectable, Logger, NotFoundException } from '@nestjs/common';
import { InjectModel } from '@nestjs/mongoose';
import { Model } from 'mongoose';
import { Order, OrderDocument } from './schemas/order.schema';

@Injectable()
export class OrderService {
  private readonly logger = new Logger(OrderService.name);

  constructor(@InjectModel(Order.name) private orderModel: Model<OrderDocument>) {}

  async create(data: any) {
    try {
      const newOrder = new this.orderModel({
        userId: data.userId,
        categoryId: data.categoryId,
        cityId: data.cityId,
        description: data.description,
        status: 'PENDING',
        // Koordinatlarƒ± GeoJSON formatƒ±na √ßeviriyoruz
        location: {
          type: 'Point',
          coordinates: [data.longitude, data.latitude], // [Boylam, Enlem]
        },
      });

      const savedOrder = await newOrder.save();
      return this.mapToProto(savedOrder);
    } catch (error) {
      this.logger.error(`Sipari≈ü olu≈üturma hatasƒ±: ${error.message}`);
      throw error;
    }
  }

  async findOne(id: string) {
    const order = await this.orderModel.findById(id).exec();
    if (!order) throw new NotFoundException('Sipari≈ü bulunamadƒ±');
    return this.mapToProto(order);
  }

  async findByUser(userId: string) {
    const orders = await this.orderModel.find({ userId }).sort({ createdAt: -1 }).exec();
    return orders.map(this.mapToProto);
  }

  async updateStatus(id: string, status: string) {
    const updatedOrder = await this.orderModel
      .findByIdAndUpdate(id, { status }, { new: true })
      .exec();
    
    if (!updatedOrder) throw new NotFoundException('Sipari≈ü bulunamadƒ±');
    return this.mapToProto(updatedOrder);
  }

  // üåç Yakƒ±ndaki Sipari≈üleri Bul
  async findNearby(longitude: number, latitude: number, radiusKm: number) {
    try {
      const orders = await this.orderModel.find({
        location: {
          $near: {
            $geometry: {
              type: 'Point',
              coordinates: [longitude, latitude],
            },
            $maxDistance: radiusKm * 1000, // Metre cinsinden
          },
        },
      }).exec();

      return orders.map(this.mapToProto);
    } catch (error) {
      this.logger.error(`Konum arama hatasƒ±: ${error.message}`);
      return [];
    }
  }

  // Helper: DB Objesini Proto formatƒ±na √ßevirir
  private mapToProto(order: OrderDocument) {
    return {
      id: order._id.toString(),
      userId: order.userId,
      categoryId: order.categoryId,
      cityId: order.cityId,
      description: order.description,
      status: order.status,
      // GeoJSON'dan koordinatlarƒ± √ßƒ±karƒ±p d√ºz olarak d√∂n√ºyoruz
      longitude: order.location.coordinates[0],
      latitude: order.location.coordinates[1],
      createdAt: (order as any).createdAt.toISOString(),
    };
  }
}